@@ -1,6 +1,6 @@
 <?php
 /**
- * @package admin
+ * @package admin/includes/functions/general.php
  * @copyright Copyright 2003-2014 Zen Cart Development Team
  * @copyright Portions Copyright 2003 osCommerce
  * @license http://www.zen-cart.com/license/2_0.txt GNU Public License V2.0
