@@ -43,24 +43,23 @@
 		// START "Stock by Attributes"
         $customid = null;
         $tmpCheck = null;
+        $attributes = null;
         if( STOCK_SBA_DISPLAY_CUSTOMID == 'true'){
 	        if ( (isset($order->products[$i]['attributes'])) && (sizeof($order->products[$i]['attributes']) > 0) ) {
 				//create array for use in zen_get_customid
 				for ($j = 0, $n2 = sizeof($order->products[$i]['attributes']); $j < $n2; $j++) {
 					$attributes[] = $order->products[$i]['attributes'][$j]['value_id'];//value_id option_id
 				}
-				$customid = '(';
+				$customid = '<br />(';
 				//get custom ID
 				for ($j = 0, $n2 = sizeof($order->products[$i]['attributes']); $j < $n2; $j++) {
-		       		if( $tmpCheck != zen_get_customid($order->products[$i]['id'],$attributes) ){
-		       			$tmpCheck = zen_get_customid($order->products[$i]['id'],$attributes);
-		       			$customid .= ' ' . zen_get_customid($order->products[$i]['id'],$attributes) . ' ';
-		       		}
+		       		$customid .= zen_get_customid($order->products[$i]['id'],$attributes) . ', ';
 		       	}
+		       	$customid = rtrim($customid,', ');
 		       	$customid .= ')';
 		    }
 		    elseif(isset($order->products[$i]['model'])){
-				$customid = '(' . $order->products[$i]['model'] . ')';
+				$customid = '<br />(' . $order->products[$i]['model'] . ')';
 			}
 		}
         
